hard-gists/4078034/run.log
=== Docker Run Log for 4078034 ===
Started at: Mi 29. Okt 14:19:28 CET 2025

[2025-10-29 14:19:29] START: Running container for 4078034
[2025-10-29 14:19:29] SUCCESS: Container 2008a7e0ff418571e51156218330730f5b1a574fe341037e3e3dc143fa055b59 started for 4078034
=== Container logs for 4078034 ===
  File "/snippet.py", line 49
    print "Usage: %s command" % (sys.argv[0],)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4078034 ===
[2025-10-29 14:19:31] INFO: Container 2008a7e0ff418571e51156218330730f5b1a574fe341037e3e3dc143fa055b59 has stopped
